set hamburger menu and header to position fixed on mobile

--- a/src/styles/_hamburger.scss
+++ b/src/styles/_hamburger.scss
@@ -3,10 +3,13 @@
 
 
 .hamburgerSection {
-    background-color: #7DA6D7;
-    width: 100%;
-    padding: 1rem;
-    border-bottom: solid 1px white;
+  position: fixed;
+  top: 100px;
+  z-index: 100;
+  background-color: #7DA6D7;
+  width: 100%;
+  padding: 1rem;
+  border-bottom: solid 1px white;
 
     @include desktop() {
         display: none;
