--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,28 +27,29 @@ body {
 
 header {
   display: flex;
-  padding: 1rem;
   background-color: #BFDFFB;
   border-bottom: solid 1px white;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  height: 100px;
+
+  @include desktop() {
+    align-items: center;
+    height: 100px;
+   }
 
   .logo {
     width: 80px;
     height: 80px;
-
+    margin-left: 20px;
+    margin-top: 10px;
   @include desktop() {
-   margin-left: 30px;
+    margin-left: 30px;
+    margin-top: 0;
    }
   }
-
-
-  @include desktop() {
-    align-items: center;
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    height: 100px;
-   }
 }
 
 main {
@@ -66,11 +67,16 @@ main {
    }
 
   .content {
+    margin-top: 163px;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding: 2rem;
     flex-grow: 1;
+
+    @include desktop() {
+      margin-top: 0;
+    }
   }
 }
 
